--- a/src/App.css
+++ b/src/App.css
@@ -15,34 +15,45 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #4391CF;
+  font-family: 'Zen Tokyo Zoo', cursive;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #EF2E32;
   font-size: 1rem;
   letter-spacing: .8rem;
-  font-weight: bold;
+  font-family: 'Zen Tokyo Zoo', cursive;
+}
+
+.App-red {
+  color: #2C5787;
+  font-size: 1rem;
+  letter-spacing: .8rem;
+  font-family: 'Zen Tokyo Zoo', cursive;
 }
 
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg);
+    transform: rotate(360deg);
   }
   to {
-    transform: rotate(360deg);
+    transform: rotate(0deg);
   }
 }
 
 @media (min-width: 600px) {
   .App-link {
+    font-size: 2rem;
+  }
+  .App-red {
     font-size: 2rem;
   }
 }
